--- a/index.html
+++ b/index.html
@@ -1,112 +1,382 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
-<link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&amp;display=swap" rel="stylesheet"/>
-<style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
-        background: #f2f2f7;
-        color: #1c1c1e;
-        width: 100%;
-        height: 100%;
-        overflow-x: hidden;
-        touch-action: manipulation;
-      }
-      .game-container, #gameContainer {
-        max-width: 420px;
-        margin: 0 auto;
-        padding: 100px 20px 60px;
-        background: white;
-        border-radius: 28px;
-        box-shadow: 0 8px 24px rgba(0,0,0,0.08);
-        position: relative;
-        box-sizing: border-box;
-      }
-      .menu-buttons, .bottom-menu, .shop-button {
-        font-weight: 600;
-        font-size: 16px;
-        border-radius: 16px;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      }
-    </style>
 <title>Shark Tapper</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&amp;display=swap" rel="stylesheet"/>
+<style>
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    html, body {
+      width: 100%; height: 100%;
+      font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
+      background: #f2f2f7;
+      color: #1c1c1e;
+      overflow: hidden;
+      touch-action: manipulation;
+    }
+    .loading-screen {
+      position: fixed; width: 100%; height: 100%;
+      background: #ffffff; z-index: 9999;
+      display: flex; flex-direction: column; align-items: center; justify-content: center;
+    }
+    .loading-screen img { max-width: 70%; }
+    .loading-screen span {
+      font-size: 22px; margin-top: 16px; color: #333;
+    }
+    .game-container {
+      position: absolute; left: 50%; top: 50%;
+      transform: translate(-50%, -50%);
+      width: 100vw; max-width: 420px; height: 100vh;
+      background: #ffffff;
+      display: flex; flex-direction: column;
+      align-items: center; justify-content: space-between;
+      padding: 24px 16px;
+    }
+    .balance {
+      font-size: 28px; font-weight: 600; margin-bottom: 16px;
+    }
+    .tap-image {
+      max-width: 100%;
+      border-radius: 20px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      cursor: pointer;
+      transition: transform 0.1s;
+    }
+    .tap-animation {
+      animation: tapPulse 0.2s ease;
+    }
+    @keyframes tapPulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(0.92); }
+      100% { transform: scale(1); }
+    }
+    .floating-text {
+      position: absolute;
+      font-size: 18px;
+      font-weight: 600;
+      color: #34c759;
+      animation: floatUp 1s ease-out forwards;
+      pointer-events: none;
+    }
+    @keyframes floatUp {
+      0% { opacity: 1; transform: translateY(0); }
+      100% { opacity: 0; transform: translateY(-40px); }
+    }
+    .menu-buttons {
+      display: flex;
+      gap: 10px;
+      margin: 16px 0;
+    }
+    .shop-button {
+      background: #007aff;
+      color: white;
+      border: none;
+      padding: 12px 20px;
+      border-radius: 14px;
+      font-size: 17px;
+      font-weight: 500;
+      box-shadow: 0 2px 6px rgba(0, 122, 255, 0.3);
+      transition: background 0.3s;
+    }
+    .shop-button:active {
+      background: #0051a8;
+    }
+    .modal {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: rgba(242, 242, 247, 0.96);
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+      z-index: 10;
+    }
+    .shop-item, .booster-item {
+      background: #fff;
+      padding: 16px;
+      margin: 12px;
+      border-radius: 16px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+      text-align: center;
+      width: 90%;
+      max-width: 300px;
+    }
+    .shop-item img {
+      width: 100px;
+      border-radius: 16px;
+      margin-bottom: 10px;
+    }
+    .shop-item button, .booster-item button {
+      background: #007aff;
+      color: #fff;
+      border: none;
+      padding: 10px 18px;
+      border-radius: 12px;
+      font-size: 16px;
+      margin-top: 10px;
+    }
+    .booster-info {
+      margin-bottom: 10px;
+      font-size: 16px;
+      font-weight: 500;
+    }
+  </style>
 </head>
-<body><div class="wrapper">
-<div class="loading-screen" id="loading">
-<img alt="Loading..." src="w1.png"/>
-<span>Приключение 2025</span>
+<body>
+<div class="loading-screen" id="loadingScreen">
+<img alt="Shark loading" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Emoji_u1f988.svg/2048px-Emoji_u1f988.svg.png"/>
+<span>Загрузка...</span>
 </div>
-<div class="game-container" id="gameContainer" style="display:none">
-<div class="balance" id="tokenCount">0 токенов</div>
-<img alt="Shark" class="tap-image" id="tapImage" onclick="handleTap()" src="shark.png?v=1"/>
+<div class="game-container" style="display:none;">
+<div class="balance"><span id="tokenCount">0</span> токенов</div>
+<img alt="Shark" class="tap-image" id="tapImage" onclick="handleTap()" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Emoji_u1f988.svg/2048px-Emoji_u1f988.svg.png"/>
 <div class="menu-buttons">
-<button class="shop-button" onclick="openShop()">Магазин</button>
-<button class="shop-button" onclick="openBoosters()">Бустеры</button>
+<button class="shop-button" onclick="openShop()">🛒 Магазин</button>
+<button class="shop-button" onclick="openBoosters()">⚡ Бустеры</button>
+<button class="shop-button" onclick="openLeaderboard()">🏆 Лидерборд</button>
+<button class="shop-button" onclick="Telegram.WebApp.close()">🚪 Выйти</button>
 </div>
-<button class="shop-button" id="endButton" onclick="Telegram.WebApp.close()" style="display: none;">Завершить</button>
 </div>
-<div class="shop-modal" id="shop-modal">
+
+
+
+<script>
+    let balance = 0;
+    function handleTap() {
+      balance++;
+      document.getElementById("tokenCount").textContent = balance;
+      const tapImage = document.getElementById("tapImage");
+      tapImage.classList.add("tap-animation");
+      setTimeout(() => tapImage.classList.remove("tap-animation"), 200);
+
+      // Вибрация (универсально)
+      if (navigator.vibrate) {
+        navigator.vibrate(50);
+      } else {
+        try {
+          const ctx = new (window.AudioContext || window.webkitAudioContext)();
+          const oscillator = ctx.createOscillator();
+          oscillator.type = "square";
+          oscillator.frequency.value = 1000;
+          oscillator.connect(ctx.destination);
+          oscillator.start();
+          setTimeout(() => {
+            oscillator.stop();
+            ctx.close();
+          }, 20);
+        } catch (e) {}
+      }
+
+      // Плавающий текст
+      const float = document.createElement("div");
+      float.className = "floating-text";
+      float.textContent = "+1";
+      float.style.left = "50%";
+      float.style.top = "40%";
+      document.body.appendChild(float);
+      setTimeout(() => document.body.removeChild(float), 1000);
+    }
+
+    function openShop() {
+      closeModals();
+      document.getElementById("shopModal").style.display = "flex";
+    }
+    function openBoosters() {
+      closeModals();
+      document.getElementById("boosterModal").style.display = "flex";
+    }
+    function openLeaderboard() {
+      closeModals();
+      document.getElementById("leaderboardModal").style.display = "flex";
+    }
+    function closeModals() {
+      document.querySelectorAll(".modal").forEach(modal => modal.style.display = "none");
+    }
+
+    // Загрузка
+    window.onload = () => {
+      setTimeout(() => {
+        document.getElementById("loadingScreen").style.display = "none";
+        document.querySelector(".game-container").style.display = "flex";
+      }, 800);
+    };
+  </script>
+
+<div class="modal" id="shopModal">
 <div class="shop-item">
-<img src="shark.png?v=1"/>
+<img alt="Default Shark" src="shark.png?v=1"/>
 <button onclick="buySkin('default', 0)">Выбрать</button>
 </div>
 <div class="shop-item">
-<img src="shark_skin2.png?v=1"/>
-<button onclick="buySkin('skin2', 1000)">Выбрать</button>
+<img alt="Skin 2" src="shark_skin2.png?v=1"/>
+<button onclick="buySkin('skin2', 1000)">Купить</button>
 </div>
 <div class="shop-item">
-<img src="shark_skin1.png?v=1"/>
-<button onclick="buySkin('skin3', 500)">Выбрать</button>
+<img alt="Skin 3" src="shark_skin1.png?v=1"/>
+<button onclick="buySkin('skin3', 500)">Купить</button>
 </div>
-<button onclick="closeShop()">Скрыть</button>
+<button class="shop-button" onclick="closeModals()">Скрыть</button>
 </div>
-<div class="booster-modal" id="booster-modal">
-<div class="booster-item">
-<div class="booster-info">Авто-Тап +1 (50 токенов)</div>
-<button onclick="buyBooster(50, 1)">Купить</button>
+<div class="modal" id="boosterModal">
+<div class="booster-item"><div class="booster-info">Авто-Тап +1 (50 токенов)</div><button onclick="buyBooster(50, 1)">Купить</button></div>
+<div class="booster-item"><div class="booster-info">Авто-Тап +2 (100 токенов)</div><button onclick="buyBooster(100, 2)">Купить</button></div>
+<div class="booster-item"><div class="booster-info">Авто-Тап +3 (1000 токенов)</div><button onclick="buyBooster(1000, 3)">Купить</button></div>
+<button class="shop-button" onclick="closeModals()">Скрыть</button>
 </div>
-<div class="booster-item">
-<div class="booster-info">Авто-Тап +2 (100 токенов)</div>
-<button onclick="buyBooster(100, 2)">Купить</button>
+<div class="modal" id="leaderboardModal">
+<div class="shop-item">Лидеры:</div>
+<ul id="leaderboardList" style="padding:0 16px;text-align:left;"></ul>
+<button class="shop-button" onclick="closeModals()">Скрыть</button>
 </div>
-<div class="booster-item">
-<div class="booster-info">Авто-Тап +3 (1000 токенов)</div>
-<button onclick="buyBooster(1000, 3)">Купить</button>
-</div>
-<button onclick="closeBoosters()">Скрыть</button>
-</div>
+<script>
+let balance = 0;
+let autoTap = 0;
+let currentSkin = 'default';
+let ownedSkins = { default: true };
+let ownedBoosters = { 1: false, 2: false, 3: false };
+let userId = null;
+let xp = 0, level = 1;
 
-</div><script>
-document.addEventListener('DOMContentLoaded', function () {
-  const loading = document.getElementById('loading');
-  const game = document.getElementById('gameContainer');
-  const endBtn = document.getElementById('endButton');
-  
+const dbUrl = 'https://tralalero-fec07-default-rtdb.firebaseio.com';
+const tokenCount = document.getElementById("tokenCount");
+const tapImage = document.getElementById("tapImage");
+
+function handleTap() {
+  balance++;
+  tokenCount.textContent = balance;
+  tapImage.classList.add("tap-animation");
+  setTimeout(() => tapImage.classList.remove("tap-animation"), 200);
+  if (navigator.vibrate) navigator.vibrate(40);
+  showFloatingText("+1");
+  updateXP(1);
+  saveProgress();
+}
+
+function showFloatingText(text) {
+  const float = document.createElement("div");
+  float.className = "floating-text";
+  float.textContent = text;
+  float.style.left = "50%";
+  float.style.top = "40%";
+  document.body.appendChild(float);
+  setTimeout(() => float.remove(), 1000);
+}
+
+function buySkin(id, price) {
+  if (ownedSkins[id]) currentSkin = id;
+  else if (balance >= price) {
+    balance -= price;
+    ownedSkins[id] = true;
+    currentSkin = id;
+  } else return alert("Недостаточно токенов!");
+  updateSkin();
+  tokenCount.textContent = balance;
+  saveProgress();
+}
+
+function updateSkin() {
+  const map = {
+    default: "shark.png?v=1",
+    skin2: "shark_skin2.png?v=1",
+    skin3: "shark_skin1.png?v=1"
+  };
+  tapImage.src = map[currentSkin] || map.default;
+}
+
+function buyBooster(price, power) {
+  if (ownedBoosters[power]) return alert("Уже куплен!");
+  if (balance >= price) {
+    balance -= price;
+    autoTap += power;
+    ownedBoosters[power] = true;
+    tokenCount.textContent = balance;
+    saveProgress();
+  } else alert("Недостаточно токенов!");
+}
+
+function startAutoTap() {
+  setInterval(() => {
+    if (autoTap > 0) {
+      balance += autoTap;
+      tokenCount.textContent = balance;
+      saveProgress();
+    }
+  }, 1000);
+}
+
+function updateXP(amount) {
+  xp += amount;
+  const xpNeeded = 20 + (level - 1) * 10;
+  if (xp >= xpNeeded) {
+    xp -= xpNeeded;
+    level++;
+    alert("Новый уровень: " + level);
+  }
+}
+
+function openLeaderboard() {
+  closeModals();
+  document.getElementById("leaderboardModal").style.display = "flex";
+  fetch(`${dbUrl}/users.json`).then(r => r.json()).then(data => {
+    const list = Object.entries(data || {}).map(([id, d]) => ({
+      id, balance: d.balance || 0
+    })).sort((a,b) => b.balance - a.balance).slice(0, 10);
+    document.getElementById("leaderboardList").innerHTML =
+      list.map(u => `<li>ID ${u.id.slice(-4)}: ${u.balance}</li>`).join("");
+  });
+}
+
+function saveProgress() {
+  if (!userId) return;
+  fetch(`${dbUrl}/users/${userId}.json`, {
+    method: 'PUT',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ balance, currentSkin, ownedSkins, autoTap, ownedBoosters })
+  });
+}
+
+function loadProgress() {
+  if (!userId) return;
+  fetch(`${dbUrl}/users/${userId}.json`)
+    .then(r => r.json())
+    .then(d => {
+      if (d) {
+        balance = d.balance || 0;
+        currentSkin = d.currentSkin || 'default';
+        ownedSkins = d.ownedSkins || { default: true };
+        autoTap = d.autoTap || 0;
+        ownedBoosters = d.ownedBoosters || {};
+        updateSkin();
+        tokenCount.textContent = balance;
+      }
+    });
+}
+
+function closeModals() {
+  document.querySelectorAll(".modal").forEach(m => m.style.display = "none");
+}
+
+window.onload = () => {
   setTimeout(() => {
-    if (loading) loading.style.display = 'none';
-    if (game) game.style.display = 'flex';
-    if (endBtn) endBtn.style.display = 'inline-block';
-  }, 2000);
+    document.getElementById("loadingScreen").style.display = "none";
+    document.querySelector(".game-container").style.display = "flex";
+  }, 800);
 
-  if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
+  if (Telegram?.WebApp) {
     Telegram.WebApp.ready();
     Telegram.WebApp.expand();
-
-    const userId = Telegram.WebApp.initDataUnsafe?.user?.id?.toString();
+    userId = Telegram.WebApp.initDataUnsafe?.user?.id?.toString();
     if (userId) {
-      window.userId = userId;
-      if (typeof loadProgress === 'function') loadProgress();
-      if (typeof startAutoTap === 'function') startAutoTap();
-    } else {
-      alert("Не удалось получить userId из Telegram Web App.");
+      loadProgress();
+      startAutoTap();
     }
   }
-});
+};
 </script></body>
 </html>
